# StratifyOS-mcu-stm32

./: .cproject  .gitignore  .project  CHANGES.md  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  LICENSE.md  README.md  stm32f2.cmake  stm32f4.cmake  stm32f7.cmake  stm32h7.cmake  stm32l4.cmake
.github/workflows/: build.yml
guides/: AddingNewChips.md
include/: mcu_stm32f205xx.h  mcu_stm32f401xc.h  mcu_stm32f401xe.h  mcu_stm32f405xx.h  mcu_stm32f411xe.h  mcu_stm32f412zx.h  mcu_stm32f413xx.h  mcu_stm32f417xx.h  mcu_stm32f429xx.h  mcu_stm32f446xx.h  mcu_stm32f722xx.h  mcu_stm32f723xx.h  mcu_stm32f746xx.h  mcu_stm32f767xx.h  mcu_stm32h735xx.h  mcu_stm32h743xx.h  mcu_stm32h750xx.h  mcu_stm32l432xx.h  mcu_stm32l475xx.h  stm32_arch.h  stm32_config.h
include/cmsis/: stm32f401xc.h  stm32f401xe.h  stm32f405xx.h  stm32f411xe.h  stm32f412zx.h  stm32f413xx.h  stm32f417xx.h  stm32f429xx.h  stm32f446xx.h  stm32f722xx.h  stm32f723xx.h  stm32f732xx.h  stm32f745xx.h  stm32f746xx.h  stm32f765xx.h  stm32f767xx.h  stm32h735xx.h  stm32h743xx.h  stm32h750xx.h  stm32h7xx.h  stm32l432xx.h  stm32l475xx.h
include/stm32/: mcu_stm32f205xx.h  mcu_stm32f401xe.h  mcu_stm32f413xx.h  mcu_stm32f429xx.h  mcu_stm32f446xx.h  mcu_stm32f722xx.h  mcu_stm32f723xx.h  mcu_stm32h743xx.h  mcu_stm32h750xx.h  mcu_stm32l475xx.h  stm32_state_types.h
ldscript/: stm32-common-ram.ld  stm32-common.ld  stm32f205xe-rom.ld  stm32f205xg-rom.ld  stm32f2xx.ld  stm32f401rc-rom.ld  stm32f401re-rom.ld  stm32f401xc-rom.ld  stm32f401xe-rom.ld  stm32f405xg-rom.ld  stm32f411ve-rom.ld  stm32f411xe-rom.ld  stm32f412xe-rom.ld  stm32f412xg-rom.ld  stm32f412xg-rom.ld.txt  stm32f412zg-rom.ld  stm32f413xg-rom.ld  stm32f413xh-rom.ld  stm32f417xe-rom.ld  stm32f417xg-rom.ld  stm32f417ze-rom.ld  stm32f417zg-rom.ld  stm32f429xe-rom.ld  stm32f429xe-rom.ld.txt  stm32f429xg-rom.ld  stm32f429xi-rom.ld  stm32f429xi-rom.ld.txt  stm32f429zi-rom.ld  stm32f446re-rom.ld  stm32f446ze-rom.ld  stm32f4xx.ld  stm32f722ie-rom.ld  stm32f723xc-rom.ld  stm32f723xe-rom.ld  stm32f723zc-rom.ld  stm32f723ze-rom.ld  stm32f72xxc-rom.ld  stm32f72xxe-rom.ld  stm32f746xe-rom.ld  stm32f746xg-rom.ld  (+16 more)
src/: CMakeLists.txt  adc_dev.c  adc_dma_dev.c  adc_local.c  adc_local.h  core_dev.c  core_initclock.c  core_set_alternate_func.c  core_setusbclock.c  core_sleep.c  core_startup.c  core_startup.h  crc_dev.c  crypt_dev.c  crypt_local.c  crypt_local.h  dac_dev.c  dac_dma_dev.c  dac_local.c  dac_local.h  eth_dev.c  fault_dev.c  flash_dev.c  hal_set_alternate_pin_function.c  hash_dev.c  hash_local.c  i2c_dev.c  i2s_spi_dev.c  i2s_spi_dma_dev.c  i2s_spi_local.c  i2s_spi_local.h  ltdc_dev.c  mcu_dev.c  mem_dev.c  mmc_dev.c  mmc_dma_dev.c  mmc_local.c  mmc_local.h  mpu_dev.c  pio_dev.c  (+41 more)
src/adc/: CMakeLists.txt  adc_dev.c  adc_dma_dev.c  adc_local.c  adc_local.h
src/core/: CMakeLists.txt  core_dev.c  core_initclock.c  core_setusbclock.c  core_sleep.c  core_startup.c  core_startup.h
src/crc/: CMakeLists.txt  crc_dev.c
src/crypt/: CMakeLists.txt  crypt_dev.c  crypt_local.c  crypt_local.h
src/dac/: CMakeLists.txt  dac_dev.c  dac_dma_dev.c  dac_local.c  dac_local.h
src/eth/: CMakeLists.txt  eth_dev.c
src/flash/: CMakeLists.txt  flash_dev.c
src/hash/: CMakeLists.txt  hash_dev.c  hash_local.c  hash_local.h
src/i2c/: CMakeLists.txt  i2c_dev.c
src/i2s/: CMakeLists.txt  i2s_spi_dev.c  i2s_spi_dma_dev.c  i2s_spi_local.c  i2s_spi_local.h
src/local/: CMakeLists.txt
src/mmc/: CMakeLists.txt  mmc_dev.c  mmc_dma_dev.c  mmc_local.c  mmc_local.h
src/pio/: CMakeLists.txt  pio_dev.c
src/qspi/: CMakeLists.txt  qspi_dev.c  qspi_dma_dev.c  qspi_local.c  qspi_local.h
src/rng/: CMakeLists.txt  rng_dev.c
src/rtc/: CMakeLists.txt  rtc_dev.c
src/sai/: CMakeLists.txt  sai_dma_dev.c  sai_local.c  sai_local.h
src/sdio/: CMakeLists.txt  sdio_dev.c  sdio_dma_dev.c  sdio_local.c  sdio_local.h
src/spi/: CMakeLists.txt  spi_dev.c  spi_dma_dev.c  spi_local.c  spi_local.h
src/stm32f205xx/: core_set_alternate_func.c  core_startup.c
src/stm32f2xx/: stm32f2xx_hal_conf.h
src/stm32f401xc/: core_dma_mapping.c  core_initclock.c  core_initclock.c.txt  core_set_alternate_func.c  core_startup.c  core_startup_stm32f401xC.c
src/stm32f401xe/: core_set_alternate_func.c  core_startup.c
src/stm32f405xx/: core_set_alternate_func.c  core_startup.c
src/stm32f411xe/: core_initclock.c  core_set_alternate_func.c  core_startup.c
src/stm32f412zx/: core_initclock.c  core_set_alternate_func.c  core_startup.c
src/stm32f413xx/: core_set_alternate_func.c  core_startup.c
src/stm32f417xx/: core_initclock.c  core_set_alternate_func.c  core_startup.c  core_startup_stm32f417xx.c
src/stm32f429xx/: core_initclock.c  core_set_alternate_func.c  core_startup.c
src/stm32f446xx/: core_initclock.c.txt  core_set_alternate_func.c  core_startup.c  core_startup_stm32f446xx.c
src/stm32f4xx/: stm32f4xx.h  stm32f4xx_hal.c  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cec.c  stm32f4xx_hal_conf.h  stm32f4xx_hal_cortex.c  stm32f4xx_hal_crc.c  stm32f4xx_hal_cryp.c  stm32f4xx_hal_cryp_ex.c  stm32f4xx_hal_dac.c  stm32f4xx_hal_dac_ex.c  stm32f4xx_hal_dcmi.c  stm32f4xx_hal_dcmi_ex.c  stm32f4xx_hal_dfsdm.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma2d.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_dsi.c  stm32f4xx_hal_eth.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_fmpi2c_ex.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hash.c  stm32f4xx_hal_hash_ex.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_i2s.c  stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_irda.c  stm32f4xx_hal_iwdg.c  stm32f4xx_hal_lptim.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_ltdc_ex.c  stm32f4xx_hal_mmc.c  (+39 more)
src/stm32f722xx/: core_startup.c
src/stm32f723xx/: core_initclock.c  core_set_alternate_func.c  core_startup.c
src/stm32f746xx/: core_set_alternate_func.c  core_startup.c
src/stm32f767xx/: core_initclock.c.txt  core_set_alternate_func.c  core_startup.c
tools/: README.md  core_set_alternate_func.c  pre_file.txt  sos_stm32_gpio_parse.py
(+102 files in other folders)
